--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
     <h2>Projects</h2>
     <div class="project-grid">
       <div class="project-card">
-        <h3>Project One</h3>
+        <h3>Automatic car</h3>
         <p>Short description of the project.</p>
       </div>
       <div class="project-card">
-        <h3>Project Two</h3>
+        <h3>Voice control car</h3>
         <p>Short description of the project.</p>
       </div>
       <div class="project-card">
-        <h3>Project Three</h3>
+        <h3>Drone</h3>
         <p>Short description of the project.</p>
       </div>
     </div>
