--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <form>
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
-      <textarea placeholder="Your Message" required></textarea>
+      <textarea placeholder="Your Phone number" required></textarea>
       <button type="submit">Send Message</button>
     </form>
   </section>
