--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="project-card">
           <h3>Drone</h3>
-          <p>Short description of the project.</p>
+          <p>Mini project.</p>
         </div>
       </div>
     </section>
