--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <div class="logo">MyPortfolio</div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
+          <li><a href="#Info">Info/li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
