discription spelling mistake

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="project-grid">
         <div class="project-card">
           <h3>Automatic car</h3>
-          <p>Short description of the project.</p>
+          <p>microcontrollers project.</p>
         </div>
         <div class="project-card">
           <h3>Voice control car</h3>
