--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section class="hero">
-      <h1>Hello, I'm <span>Rahul Reddy</span></h1>
+      <h1>Hello, I'm <span>Inka anni sarlu raaa</span></h1>
       <p>Web Developer | Designer | Full Stack developer</p>
       <a href="#projects" class="btn">View Projects</a>
     </section>
